Fixed scrolling on iOS due the options-container being transformed out of view
- introduced a main wrapping div with 'overflow:hidden' and 'position:fixed'
- changed the 'Options' button to read 'CSS Toggles'

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,13 @@ html {
 
 body {
     margin: 0;
+}
+
+.tf-main {
+    position: fixed;
+    width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .tf-checkbox {
